# simple-time-tracker

./: .envrc  .gitignore  .rules  AGENTS.md  CLAUDE.md  CLI_VS_WEB_FEATURE_COMPARISON.md  CONVENTIONS.md  Cargo.toml  README.md  TECH_DEBT_REVIEW.md  UNIVERSAL_DSL_TESTING_GUIDE.md  WEB_INTERFACE_CODE_REVIEW.md  WEB_ONBOARDING_GUIDE.md  diagram.html  flake.nix  justfile  lcov.info
.agents/: skills.selected
.claude/: mcp-config.json  settings.local.json
.claude/agents/: code-reviewer.md
.claude/commands/: build.md  commit.md  tdd.md
.claude/prompts/: security-scan.md
.github/workflows/: rust.yml
.serena/: project.yml
.serena/memories/: jj-rebase-multcommit-to-main.md
.zed/: settings.json
benches/: benchmark_dsl.rs  parse_bench.rs
docs/: ATOMIC-BRANCHES.md  README.md  UNIVERSAL_DSL_TESTING_GUIDE.md  code-review-llm.md  commit-guidelines.md  documentation-summary.md  jj-rebase-multcommit-to-main.md  rust-fold-vs-mutation-analysis.md  testing-guidelines.md  web-dashboard.md
docs/adr/: ADR-001-use-owned-strings-in-error-types.md
docs/backlog/: 001-refactor-function-signatures.md  002-markdown-details-implement-or-block.md  003-fix-last-month-january-bug.md  004-fix-processor-error-messages.md  005-fix-panic-in-date-functions.md  006-optimize-regex-compilation.md  008-optimize-error-handling-allocations.md  breakdown-details.md  code-review-2025-01-20.md  code_quality_analysis.md  fuzz_test_parser.md  optimize_error_handling.md  performance-benchmark-ci-integration.md  review-20260128-add-cors.md  review-20260128-add-pagination.md  review-20260128-add-rate-limiting.md  review-20260128-deduplicate-chart-templates.md  review-20260128-htmx-imperative-onclick.md  review-20260128-reduce-data-cloning.md  review-20260128-redundant-file-reads.md  tag-daily-weekly-monthly-yearlty-tracking.md  transform-web-interface-to-htmx.md  web-version.md
docs/c4/: .gitignore  shared-tracking-core.dsl  time-tracker.dsl
docs/code-reviews/: 6-agent-review-2025-09-23.md  claude-comprehensive-review.md  code-review-llm.md  multi-agent-quality-audit-2025-09-24.md  strategy-audit-2025-09-24.md
docs/notes/: 007-add-integer-bounds-checking.md
docs/plans/: 2026-03-04-c4-model-design.md
docs/site/: workspace.js
docs/testing/: coverage-impact-analysis.md  edge-cases-added.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: description_fuzz.rs  multiline_fuzz.rs  tag_fuzz.rs  time_fuzz.rs
instructions/: PRD.md  PRD.txt  Task 001 Specification.md
instructions/Test acts as both executable specification and requirements for both human and DSL to implement from/: Implementation plan.md  Tests as executable specification and requirements for (LLM-driven) development.md  prompts.md
notes/: fuzz_test_parser.md  on2-performance-risk.md  tag-daily-weekly-monthly-yearly-tracking.md
prompts/: development-style.md  general.md  tdd.md
scripts/: serena-mcp
src/: lib.rs  main.rs
src/cli/: mod.rs  statistics.rs
src/domain/: aggregates.rs  mod.rs  reporting.rs  reports.rs  stats.rs  tags.rs  time.rs
src/parsing/: mod.rs  (+9 more)
templates/: base.html  chart_outcomes_pie.html  chart_projects_bar.html  chart_projects_pie.html  dashboard.html  dashboard_combined_partial.html  flag_statistics.html  outcomes.html  outcomes_combined_partial.html  outcomes_partial.html  projects_partial.html  stats.html  stats_partial.html  summary_partial.html  tag_detail.html
tests/: acceptance_tests.rs  cli.rs  details.rs  format_markdown.rs  limit.rs  main.rs  periods.rs  tags.rs  test_helpers.rs
(+50 files in other folders)
