[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "tt"
path = "src/main.rs"

[[bin]]
name = "tt-web"
path = "src/bin/tt-web.rs"

[dependencies]
anyhow = "1.0"                                     # Error handling
clap = { version = "4.4", features = ["derive"] }  # CLI argument parsing
chrono = "0.4"
itertools = "0.12"
regex = "1.10"
walkdir = "2.4"

axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0.16" # CLI testing
predicates = "3.1.3"  # Assertions for testing
rstest = "0.24.0"     # Table driven testing
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false

