[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "tt"
path = "src/main.rs"

[features]
default = []
web = ["dep:axum", "dep:tokio", "dep:askama", "dep:askama_axum", "dep:tower", "dep:tower-http"]

[dependencies]
anyhow = "1.0"                                     # Error handling
clap = { version = "4.4", features = ["derive"] }  # CLI argument parsing
chrono = "0.4"
itertools = "0.12"
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
askama = { version = "0.12", optional = true }
askama_axum = { version = "0.4", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0.16" # CLI testing
predicates = "3.1.3"  # Assertions for testing
rstest = "0.24.0"     # Table driven testing
criterion = "0.5"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "parse_bench"
harness = false

